fix: resolve Quill editor initialization and positioning issues
- Implement local asset management for Quill.js v2.0.3
- Fix multiple toolbar creation in React StrictMode
- Add comprehensive initialization guards and cleanup
- Resolve positioning conflicts with workspace grid layout
- Remove CSS-in-JS styling for better workspace integration
- Implement proper event handling and lifecycle management
- Add debounced initialization to handle component re-mounts

--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DSA Learning App</title>
+    <!-- Quill.js CSS -->
+    <link rel="stylesheet" href="/styles/lib/quill.snow.css" />
   </head>
 
   <body>
     <div id="root"></div>
+    <!-- Quill.js Library -->
+    <script src="/scripts/lib/quill.js"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
